<resources>
    <string name="app_name">Cellpay Crypto</string>
    <string name="membership_prompt">Membership Type</string>
    <string name="membership_promptss">Membership Type</string>
    <string name="transaction_cancelled_by_user">Transaction cancelled by user</string>
    <string name="some_error_occurred">Some error occurred...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_profile_">Profile_Activity</string>
    <string name="home">Home</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Please allow permission</string>
    <string name="ok">ok</string>
    <string name="google_id">AIzaSyAyTQfUyg7sD9E07H6vgu1WrpVWAXSK2hQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recharge_pay_bills"><![CDATA[Recharge & Pay Bills]]></string>
    <string name="about">About Us Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="free_tiket">Screen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_markets">Premium Membership</string>
    <string name="title_trades">Trades</string>
    <string name="title_futures">Redeem</string>
    <string name="title_wallets">Transfer</string>
    <string name="testNoti">Sellpay NFT Market Place launches Genesys Dragos By League of SellPay</string>
    <string name="submit">Submit</string>
    <string name="hint">000</string>
    <string name="go_back_login">Go To Home</string>

    <string-array name="membership_types">
        <item>Bank Account</item>
        <item>Google Pay</item>
        <item>Phone Pay</item>
        <item>Paytm</item>
        <item>Bit Coin</item>
    </string-array>

    <string-array name="amount">
        <item>Choose Amount</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>
    <string-array name="countryname">
        <item>India</item>
        <item>South Africa</item>
        <item>US</item>
        <item>London</item>
        <item>Russia</item>
    </string-array>
    <string name="title_activity_referral">ReferralActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="error_writing_image">Error when writing image</string>
    <string name="alert">Alert</string>
    <string name="reGrantPermissionMsg">You have denied the required permission. Please grant to proceed further.</string>
    <string name="action_settings">Settings</string>
    <string name="title_Ads">Ads</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
