<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_markets"
        android:title="@string/title_markets" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_trades"
        android:title="@string/title_trades" />
    <item
        android:id="@+id/navigation_futures"
        android:icon="@drawable/ic_future"
        android:title="@string/title_futures" />

    <item
        android:id="@+id/navigation_wallets"
        android:icon="@drawable/ic_wallets"
        android:title="@string/title_wallets" />

</menu>