<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.e.cellpaycrypto.Fragment.Mainfragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_m_ainfragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.e.cellpaycrypto.menus.ui.home.HomeFragment"
        android:label="@string/title_markets"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.e.cellpaycrypto.menus.ui.notifications.NotificationsFragment"
        android:label="@string/title_trades"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_futures"
        android:name="com.e.cellpaycrypto.menus.ui.futures.FuturesFragment"
        android:label="@string/title_futures"
        tools:layout="@layout/fragment_futures" />
    <fragment
        android:id="@+id/navigation_wallets"
        android:name="com.e.cellpaycrypto.menus.ui.wallets.WalletsFragment"
        android:label="@string/title_wallets"
        tools:layout="@layout/fragment_wallets" />
</navigation>